Updated Figure Collections Document

--- a/figure-collections-agent.mdx
+++ b/figure-collections-agent.mdx
@@ -37,12 +37,7 @@ The following is a list of data fields for the payment collections agent:
 | HasAutomaticPayments    | Boolean indicator of whether the customer is enrolled in automatic payments       | Boolean   |
 | DaysLate                | The number of days the account is past due, if applicable.                        | Number    |
 | NextPaymentDueDate      | The date when the customer's next payment is due, in YYYY-MM-DD format            | String    |
-| PrimaryAccountType      | The type of primary account being used for automatic payments (checking or savings). | String    |
-| PrimaryAccountNumberLastFour | The last four digits of the customer's primary bank account number used for payments. | Number    |
-| PrimaryRoutingNumber    | The last four digits of the primary bank routing number used for payments         | Number    |
-| SecondaryAccountType    | The type of secondary account being used for automatic payments (checking or savings). | String    |
-| SecondaryAccountNumberLastFour | The last four digits of the customer's secondary bank account number used for payments. | Number    |
-| SecondaryRoutingNumber  | The last four digits of the secondary bank routing number used for payments       | Number    |
+| Accounts      | An array of all available payment accounts with each entry having two keys "AccountId" and "AccountNumberLastFour" | Array[JSON]   |
 | LoanStatus              | The current status of the loan (e.g., CURRENT, DELINQUENT, LOSS_MITIGATION)       | String    |
 | LastContactDate         | The date when the borrower was last contacted                                     | String    |
 | Language                | Code indicating the customer's preferred language (en=English, es=Spanish)        | String    |
@@ -85,12 +80,17 @@ See below for an example JSON schema of the datapoints above, with example data.
   "HasAutomaticPayments": false,
   "DaysLate": 10,
   "NextPaymentDueDate": "2025-09-28",
-  "PrimaryAccountType": "Checking",
-  "PrimaryAccountNumberLastFour": 1234,
-  "PrimaryRoutingNumber": 9876,
-  "SecondaryAccountType": "Savings",
-  "SecondaryAccountNumberLastFour": 5678,
-  "SecondaryRoutingNumber": 5432,
+  "Accounts":
+  [
+    {
+      "AccountId": "57bfcd39-cf7a-42e9-8934-ccfd95669868",
+      "AccountNumberLastFour": "1234"
+    },
+    {
+      "AccountId": "b8d0cb94-a46c-4ddf-9b31-e21415a7b3ba",
+      "AccountNumberLastFour": "5678"
+    }
+  ],
   "LoanStatus": "Delinquent",
   "LastContactDate": "2025-08-15",
   "Language": "en",
@@ -110,10 +110,231 @@ See below for an example JSON schema of the datapoints above, with example data.
 
 Test and production API information for this implementation are TBD and will be provided upon engagement.
 
+### 1. Trigger Call Endpoint
+
+**Endpoint:** `/figure-collections/{environment}/trigger-call`  
+**Method:** POST  
+**Content-Type:** application/json  
+**Authentication:** JWT token required
+
+Note: This endpoint triggers an automated collection call to the specified borrower. JWT authentication is required with valid Figure Collections organization credentials. The environment may be `test` or `prod`.
+
+#### Request Body
+
+```json
+{
+  "FirstName": "string",
+  "LastName": "string",
+  "DOB": "YYYY-MM-DD",
+  "TaxIDLastFour": "number",
+  "LoanID": "number",
+  "PhoneNumber": "string",
+  "BorrowerEmail": "string",
+  "PropertyAddress": "string",
+  "PropertyCity": "string",
+  "PropertyState": "string",
+  "PropertyZip": "number",
+  "MailingAddress": "string",
+  "MailingCity": "string",
+  "MailingState": "string",
+  "MailingZip": "number",
+  "MonthlyPayment": "number",
+  "TotalAmountDue": "number",
+  "LateChargesBalance": "number",
+  "PrincipalBalance": "number",
+  "PendingPmt": "boolean",
+  "HasAutomaticPayments": "boolean",
+  "DaysLate": "number",
+  "NextPaymentDueDate": "YYYY-MM-DD",
+  "Accounts": [
+    {
+      "AccountId": "string",
+      "AccountNumberLastFour": "string"
+    }
+  ],
+  "LoanStatus": "string",
+  "LastContactDate": "YYYY-MM-DD",
+  "Language": "en|es",
+  "BorrowerDeceased": "boolean",
+  "EscrowBalance": "number",
+  "InterestRate": "number",
+  "LastPaymentHistory": "string",
+  "LastPaymentDate": "YYYY-MM-DD",
+  "SecondBorrowerFirstName": "string",
+  "SecondBorrowerLastName": "string",
+  "SecondBorrowerDOB": "YYYY-MM-DD",
+  "InsuranceInfo": "string"
+}
+```
+
+#### Response
+
+**Success Response (200 OK):**
+```json
+{
+  "message": "Campaign entity created successfully",
+  "entity_id": "string",
+  "data": {
+    "id": "string",
+    "FirstName": "string",
+    "LastName": "string",
+    "DOB": "YYYY-MM-DD",
+    "TaxIDLastFour": "number",
+    "LoanID": "number",
+    "PhoneNumber": "string",
+    "BorrowerEmail": "string",
+    "PropertyAddress": "string",
+    "PropertyCity": "string",
+    "PropertyState": "string",
+    "PropertyZip": "number",
+    "MailingAddress": "string",
+    "MailingCity": "string",
+    "MailingState": "string",
+    "MailingZip": "number",
+    "MonthlyPayment": "number",
+    "TotalAmountDue": "number",
+    "LateChargesBalance": "number",
+    "PrincipalBalance": "number",
+    "PendingPmt": "boolean",
+    "HasAutomaticPayments": "boolean",
+    "DaysLate": "number",
+    "NextPaymentDueDate": "YYYY-MM-DD",
+    "Accounts": [
+      {
+        "AccountID": "string",
+        "AccountNumberLastFour": "string"
+      }
+    ],
+    "LoanStatus": "string",
+    "LastContactDate": "YYYY-MM-DD",
+    "Language": "en|es",
+    "BorrowerDeceased": "boolean",
+    "EscrowBalance": "number",
+    "InterestRate": "number",
+    "LastPaymentHistory": "string",
+    "LastPaymentDate": "YYYY-MM-DD",
+    "SecondBorrowerFirstName": "string",
+    "SecondBorrowerLastName": "string",
+    "SecondBorrowerDOB": "YYYY-MM-DD",
+    "InsuranceInfo": "string"
+  }
+}
+```
+
+**Error Response (400 Bad Request):**
+```json
+{
+  "status": "error",
+  "error": "Invalid request data",
+  "details": "string"
+}
+```
+
+**Error Response (401 Unauthorized):**
+```json
+{
+  "status": "error",
+  "error": "Invalid or missing authentication token"
+}
+```
+
+### 2. Process Payment API
+
+During a collection call, the agent needs access to a payment processing API it can interface with. The agent will only accept minimum payment amounts. Payments can be scheduled for the current date or up to 30 days in the future.
+
+Following is an example of request body the agent should be able to send through to the payment processing API.
+
+#### Field Descriptions
+
+| Field | Description | Data Type | Notes |
+|-------|-------------|-----------|--------|
+| `LoanID` | Borrower ID to attach payment to | String | Must match existing loan in system |
+| `PaymentAmount` | Amount to be processed | Number | Must meet minimum payment |
+| `PaymentDate` | Date when payment will be processed | String | Current date or future (max 30 days) |
+| `AccountID` | Unique identifier for payment account | String | From borrower's available accounts |
+| `AccountNumberLastFour` | Last 4 digits of account number | String | For verification and display |
+
+#### Request Body
+
+```json
+{
+  "LoanID": "string",
+  "PaymentAmount": "number",
+  "PaymentDate": "YYYY-MM-DD",
+  "AccountID": "string",
+  "AccountNumberLastFour": "string",
+}
+```
+
+#### Payment Processing Rules
+
+- **Minimum Payment**: Kastle system enforces minimum payment amount based on loan terms
+- **Future Dating**: Payments can be scheduled up to 30 days in advance
+
+
+### 3. Post Call Webhook
+
+This webhook is triggered after each collection call completes. It provides call outcome data and borrower responses to help you update your systems and determine next actions.
+
+#### Field Descriptions
+
+| Field | Description | Data Type | Notes |
+|-------|-------------|-----------|--------|
+| `KastleCallID` | Unique identifier for this call session | String | Used for call tracking and retrieval |
+| `LoanID` | The loan ID for this borrower | String | From original trigger data |
+| `BorrowerName` | Full name of the borrower contacted | String | Verified during call |
+| `CallTimestamp` | When the call was completed | Integer | Unix Timestamp (in seconds) |
+| `CallDurationSeconds` | Length of the call in seconds | Number | Total talk time |
+| `PastDueAmountInformed` | Whether the past due amount was communicated | Boolean | True if amount was discussed |
+| `OccupancyStatus` | Current property occupancy status | Enum | Values: occupied, vacant, tenant, unknown |
+| `ReasonForDelinquency` | Why the borrower is delinquent | String/Null | Not asked if DaysLate < 15 (grace period) |
+| `PromiseToPay` | Payment commitment details | Object | Contains collected status, amount, and date |
+| `KastleCallSummary` | AI-generated summary of the call | String | Key points and outcomes |
+| `QRPCIndicator` | Qualified Right Party Contact indicator | Boolean | True if verified borrower was reached |
+| `CallOutcome` | Result of the call attempt | Enum | Connection status |
+| `BorrowerVerified` | Whether borrower identity was confirmed | Boolean | Based on verification questions |
+| `PaymentCollected` | Whether payment was processed during call | Boolean | True if payment successful |
+| `PaymentDetails` | Payment transaction information | Object | Only populated if payment collected |
+| `BorrowerDeceased` | Indicates if borrower is reported as deceased | Boolean | Compliance flag for account handling |
+| `CeaseAndDesist` | Borrower has requested to cease communication | Boolean | Legal compliance indicator |
+| `DoNotCall` | Borrower is on do-not-call list | Boolean | Regulatory compliance flag |
+
+#### Request Body
+
+```json
+{
+  "KastleCallID": "string",
+  "LoanID": "string",
+  "BorrowerName": "string",
+  "CallTimestamp": "YYYY-MM-DDTHH:MM:SSZ",
+  "CallDurationSeconds": "number",
+  "PastDueAmountInformed": "boolean",
+  "OccupancyStatus": "Occupied|Vacant|Tenant|Unknown",
+  "ReasonForDelinquency": "string|null",
+  "PromiseToPay": {
+    "Collected": "boolean",
+    "Amount": "number|null",
+    "Date": "YYYY-MM-DD|null"
+  },
+  "KastleCallSummary": "string",
+  "QRPCIndicator": "boolean",
+  "CallOutcome": "Connected|Voicemail|NoAnswer|Busy|Failed|DidNotDial",
+  "BorrowerVerified": "boolean",
+  "PaymentCollected": "boolean",
+  "PaymentDetails": {
+    "PaymentAmount": "number",
+    "PaymentDate": "YYYY-MM-DD",
+    "AccountID": "string",
+    "AccountNumberLastFour": "string",
+  }
+}
+```
+
+
 ## Support and Integration
 
 For questions, issues, or to set up your production integration:
 
 - **Technical Support**: Send us a message on our [Slack channel](https://join.slack.com/share/enQtODgxNTg1ODUyOTc3OC1iN2NhMmY3MzA4MDFmNzg1MjNjNWE1MGQ0ODI2MGM1ODM3YWRmYWI5YTY2NmNjOTdkMWZhYjllNjdmMmRkNjIz)
 - **Production Setup**: Contact us to configure your production campaign ID and webhook endpoints
-- **API Testing**: Use the test endpoints above (TBD) to validate your integration before going live 
+- **API Testing**: Use the test endpoints above (TBD) to validate your integration before going live
